<resources>
    <string name="app_name">Weather_App</string>
    <string name="_00_00_c">00:00 °C</string>
    <string name="today">Today</string>
    <string name="sunny">SUNNY</string>
    <string name="max_00_00_c">Max: 00:00 °C</string>
    <string name="min_00_00_c">Min: 00:00 °C</string>
    <string name="tuesday">Tuesday</string>
    <string name="_25_january_2024">25 January 2024</string>
    <string name="_0_0">0.0%</string>
    <string name="humidity">Humidity</string>
    <string name="_0_00_m_s">0.00 m/s</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="condition">Condition</string>
    <string name="_00_00">00:00</string>
    <string name="sunrise">Sunrise</string>
    <string name="sea">Sea</string>
</resources>